--- a/01-Python-Crash-Course/P1.ipynb
+++ b/01-Python-Crash-Course/P1.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "adb14077-5bc3-40f5-9d34-4982957adeab",
    "metadata": {},
    "outputs": [],
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "20ad3a92-de58-4d3a-980c-da448e773ed6",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "d8d3e399-044a-479f-ae36-fb35b390d7e5",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "['a', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,8 +705,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bacb4a7c-31fc-4f90-9e62-cce639390ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3f14cdd6-257d-4efe-a395-dc91ac8a08d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b', 'c']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "683e14bd-f972-4a00-b4ba-bdff9e380392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list[0] = 'NEW'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "81fd4de8-5d1e-47e8-9f81-d8b672cdadc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NEW', 'b', 'c', 'd']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bec4b57f-ad2c-442b-ab3e-86855df0b2be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nest = [1, 2,[3, 4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3387fd24-8dbf-4a77-9c71-dc87b199c395",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, [3, 4]]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cd76649c-4819-4d76-bc6e-fdf690037c05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nest[2][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c0e644dc-e9f9-4f11-8e74-ffa0112b5f20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nest = [1,2,3,[4,5,['target']]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c646a4a-55e9-44fc-b9c2-e0094dac8c92",
    "metadata": {},
    "outputs": [],
    "source": []
