--- a/01-Python-Crash-Course/P1.ipynb
+++ b/01-Python-Crash-Course/P1.ipynb
@@ -840,8 +840,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6c646a4a-55e9-44fc-b9c2-e0094dac8c92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nest[3][2][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97923708-b7e4-46cf-95c7-79461559fb8f",
    "metadata": {},
    "outputs": [],
    "source": []
