--- a/01-Python-Crash-Course/P2.ipynb
+++ b/01-Python-Crash-Course/P2.ipynb
@@ -663,18 +663,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bd5b8f7d-3613-4769-8424-3ac0f4c93688",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "seq = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4ef95ff8-d4e4-4231-9944-40a94d139763",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in seq:\n",
+    "    print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dc97bfbe-794a-4165-aec1-0adcb88db23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is: 1\n",
+      "i is: 2\n",
+      "i is: 3\n",
+      "i is: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "\n",
+    "while i < 5:\n",
+    "    print('i is: {}'.format(i))\n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "afae40ad-3020-4d45-bd6d-0b5eb4d6d3ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(0,5):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3f909ae9-184d-4563-a504-27d915007052",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "66acbfa9-2c71-4d94-af3e-3a5e5636f4d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "36c50949-9c96-45f9-9f62-12a05da832d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = []\n",
+    "\n",
+    "for num in x:\n",
+    "    out.append(num**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "24891ec5-c009-4d56-b2fc-21b5fa880ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a3851f4c-4348-4861-a56c-b70f8513b7b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = [num**2 for num in x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4bbcf02a-2fe5-4f62-ae56-4f49c16d66a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "10ed5233-2165-458f-b859-805f4133b6b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_func(name='Default Name'):\n",
+    "    print('Hello '+name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0bad4d4b-582d-416a-8765-135da7b22803",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.my_func(name='Default Name')>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2783a8b6-af2f-470d-a521-178f50efcd22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square(num):\n",
+    "    \"\"\"\n",
+    "    THIS IS A DOCSTRING.\n",
+    "    \"\"\"\n",
+    "    return num**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4e0c23be-22d2-452f-952f-db5f866339e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = square(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d16ad041-eee4-4a6a-b5d4-ceedc6a3b8cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33727160-0d85-42e3-8c96-10c5974bab43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "square"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
