--- a/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
+++ b/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
@@ -105,13 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "planet = \"Earth\"\n",
@@ -120,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +126,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print('The diameter of {planet} is {diameter} kilometers.'.format(planet = planet, diameter = diameter))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,13 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]"
@@ -156,21 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'hello'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(lst[3][1][2][0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -199,12 +190,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "d['k1'][3]['tricky'][3]['target'][3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,16 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Tuple is immutable"
+    "# List is mutable and tuples are immutable"
    ]
   },
   {
@@ -240,19 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def domainGet(string):\n",
+    "    return string.split('@')[1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +247,7 @@
        "'domain.com'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,19 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def findDog(string):\n",
+    "    if \"dog\" in string:\n",
+    "        return True"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +285,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,14 +303,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def countDog(string):\n",
+    "    return string.split().count(\"dog\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +322,7 @@
        "2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,13 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "seq = ['soup','dog','salad','cat','great']"
@@ -372,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -381,12 +364,14 @@
        "['soup', 'salad']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list(filter(lambda seq: seq.startswith('s'), seq))"
+   ]
   },
   {
    "cell_type": "markdown",
