Python Crash Course Exercise

--- a/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
+++ b/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,19 +148,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(lst[3][1][2][0])"
+    "lst[3][1][2][0]"
    ]
   },
   {
@@ -387,22 +390,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def caught_speeding(speed, is_birthday):\n",
-    "    pass"
+    "    if is_birthday:\n",
+    "       speeding = speed - 5\n",
+    "    else:\n",
+    "        speeding = speed\n",
+    "\n",
+    "    if speeding > 80:\n",
+    "        return 'Big Ticket'\n",
+    "    elif speeding > 60:\n",
+    "        return 'Small Ticket'\n",
+    "    else:\n",
+    "        return 'No Ticket'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +419,7 @@
        "'Small Ticket'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +439,7 @@
        "'Big Ticket'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
